# CompetitiveC

./: .gitignore  CMakeLists.txt  README.md
bits/: stdc++.h
problems/: apartments.cpp  distinct_numbers.cpp  ferris_wheel.cpp  maximum_subarray_sum.cpp  missing_coin_sum.cpp  restaurant_customers.cpp
test/source/: main.cpp
